Changed the home latest title to a short intro of myself with image. Fixed header and main overlap.

--- a/css/contact_styles.css
+++ b/css/contact_styles.css
@@ -1,5 +1,5 @@
 .contact-body {
-    background-image: linear-gradient(to top, #000000 50%, #262626);
+    background-image: conic-gradient(at 100% 100%, #262626, #000000 85%, #262626);
 }
 
 .fields-container {
